# mizanvector

./: .env.example  LICENSE  README.md  __init__.py  config.py  embeddings.py  main.py  metrics.py  pyproject.toml  rerank.py  store_base.py
data/: doc1.txt  doc2.txt
examples/: In-memory_semantic_search.ipynb  example_basic_search.py  mizan_vs_cosine_proof.ipynb  mnist_mizan_contrastive.ipynb
examples-py/: experiment_large_file.py  mizan_vs_cosine_proof.py  testdata.txt  testdata_large_mizan.txt
mizan_vector/: embeddings.py  losses.py  metrics.py  store_memory.py  store_pgvector.py
mizanvector/: __init__.py  config.py  embeddings.py  losses.py  math.py  rerank.py  store_base.py  store_memory.py  store_pgvector.py
mizanvector.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_metrics.py
